// Copyright 2024 Thorn Labs. All Rights Reserved.
//
// Licensed under the GNU General Public License, Version 3.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.gnu.org/licenses/gpl-3.0.html
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package thorn;

import "node.proto";

/// Node fleet service.
service Fleet {
  rpc CreateNode(CreateNodeRequest) returns (CreateNodeResponse) {}
  rpc DeleteNode(DeleteNodeRequest) returns (DeleteNodeResponse) {}
  rpc Ping(PingRequest) returns (PingResponse) {}
}

// CreateNode messages
message CreateNodeRequest {}
message CreateNodeResponse { Node node = 1; }

// DeleteNode messages
message DeleteNodeRequest { Node node = 1; }
message DeleteNodeResponse {}

// Ping messages
message PingRequest { Node node = 1; }
message PingResponse { bool success = 1; }
